--- a/crud/templates/web/admin/admin_dashboard.html
+++ b/crud/templates/web/admin/admin_dashboard.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <!-- Charts Section -->
-            <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-8">
+            <div class="grid grid-cols-1 grid-rows-1 lg:grid-rows-2 lg:grid-cols-2 gap-6 mb-8">
                 <!-- Bar Chart -->
                 <div class="bg-white rounded-lg shadow p-6">
                     <h3 class="text-lg font-semibold text-gray-700 mb-4">Monthly Sales {{ current_year }}</h3>
