--- a/crud/templates/web/guest/nova_hotel.html
+++ b/crud/templates/web/guest/nova_hotel.html
@@ -668,7 +668,40 @@
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 {% comment %} script for feedback form {% endcomment %}
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+  const form = document.getElementById('zapierFeedbackForm');
 
+  form.addEventListener('submit', async function(event) {
+    event.preventDefault();
+
+    // Gather data from the form fields
+    const email = document.getElementById('zapier_email').value;
+    const name = document.getElementById('zapier_name').value;
+    const feedback = document.getElementById('zapier_feedback').value;
+
+    try {
+      const response = await fetch("https://cors-anywhere.herokuapp.com/https://hooks.zapier.com/hooks/catch/23389223/uoy2q6o/", {
+        method: 'POST',
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ name: name, email: email, message: feedback }),
+      });
+
+      if (response.ok) {
+        alert("Feedback submitted successfully!");
+        document.getElementById('zapierFeedbackForm').reset();
+      } else {
+        alert('Failed to submit feedback, Please try again.');
+      }
+    } catch (error) {
+      console.error('Error:', error.message);
+      alert('Sorry, there was an error submitting your feedback. Please try again.');
+    }
+  });
+});
+</script>
 
 {% comment %} script for FAQ {% endcomment %}
 <script>
